--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -34,7 +34,7 @@
   justify-content: space-between;
 }
 
-.card-title {
+.card-title h5{
   font-size: 1.5rem;
   white-space: nowrap;
   overflow: hidden;
