--- a/src/app/user/users/users.component.css
+++ b/src/app/user/users/users.component.css
@@ -22,3 +22,20 @@
 .table tr:hover {
   background-color: #ddd;
 }
+
+
+@media only screen and (max-width: 468px) {
+
+  .table-container {
+    overflow-x: scroll; 
+  }
+
+  .table-container table {
+      width: 100%;
+  }
+
+  .table-container th, .table-container td {
+      padding: 8px;
+  }
+  
+}
