--- a/src/app/user/users/users.component.html
+++ b/src/app/user/users/users.component.html
@@ -1,25 +1,27 @@
-<table class="table">
-  <tr>
-    <th>Name</th>
-    <th>Last Name</th>
-    <th>Email</th>
-    <th>Username</th>
-    <th>Address</th>
-    <th>Action</th>
-    <th>Disactivated</th>
-  </tr>
-  @for (user of users; track user.user_id) {
-    @if (user.activated === true) {
-      <tr>
-        <td>{{ user.name }}</td>
-        <td>{{ user.last_name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.username }}</td>
-        <td>{{ user.address }}</td>
-        <td><a type="button" class="btn btn-outline-warning" routerLink="/users/editUsers/{{user.user_id}}">Modify user</a></td>
-        <td><button class="btn btn-outline-danger" (click)="disactivatedUser(user.user_id)">Disactivated user</button></td>
-      </tr>
+<div class="table-container">
+  <table class="table">
+    <tr>
+      <th>Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Username</th>
+      <th>Address</th>
+      <th>Action</th>
+      <th>Disactivated</th>
+    </tr>
+    @for (user of users; track user.user_id) {
+      @if (user.activated === true) {
+        <tr>
+          <td>{{ user.name }}</td>
+          <td>{{ user.last_name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.username }}</td>
+          <td>{{ user.address }}</td>
+          <td><a type="button" class="btn btn-outline-warning" routerLink="/users/editUsers/{{user.user_id}}">Modify user</a></td>
+          <td><button class="btn btn-outline-danger" (click)="disactivatedUser(user.user_id)">Disactivated user</button></td>
+        </tr>
+      }
     }
-  }
-</table>
+  </table>
+</div>
 
